--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Crazy Stupid Party Bus</title>
 </head>
+
 <body>
-  {{{body}}}
+  {{>header}}
+  <div class="container">
+    {{{body}}}
+  </div>
+  {{>footer}}
 </body>
+
 </html>
