--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,4 @@
-<footer>
+<footer>subtitle
   <img class ='stick figures' src = 'INSERT SOURSE IMAGE' alt="team death star">
+  <figcaption> Team Death Star, 2022</figcaption>
 </footer>
