--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,14 +3,14 @@
 
   <ul>
     {{#each bus}}
-    <div>
+    <div class="flex-container">
       <li>
         <h3> {{name}}</h3>
         <p>{{description}}</p>
         <img src="">
       </li>
     </div>
-    
+    {{/each}}
   </ul>
 
 </section>
