--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
 <body class = "body">
   {{>header}}
   <div class="container">
-    {{!-- {{{body}}} --}}
+    {{{body}}}
   </div>
   {{>footer}}
 </body>
