--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,11 @@
 <header>
-  <h1>Crazy Stupid Party Bus</h1>
-  <nav>
-    insert nav bar stuff
+  <h1>Crazy Stupid Bus</h1>
+  <h2>There's A Bus For Everyone</h2>
+  <nav class = 'navbar'>
+     <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/schedule">Schedule</a></li>
+      <li><a href="/booking">Book Now!</a></li>
+    </ul> 
   </nav>
 </header>
