--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,8 +8,9 @@
   <title>Crazy Stupid Party Bus</title>
 </head>
 
-<body class = "body">
+<body>
   {{>header}}
+  {{>nav}}
   <div class="container">
     {{{body}}}
   </div>
