--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,7 +1,5 @@
   <nav id = 'navbar'>
-     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/schedule">Schedule</a></li>
-      <li><a href="/booking">Book Now!</a></li>
-    </ul> 
+      <a class="nav-item" href="/">Home</a>
+      <a class="nav-item"href="/schedule">Schedule</a>
+      <a class="nav-item"href="/booking">Book Now!</a>
   </nav>
