--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -4,11 +4,11 @@
 
   <ul>
     {{#each schedule}}
-    <div class="flex-container">
+    <div class="flex">
       <li>
-        <h3> {{name}}</h3>
-        <p>{{day}}</p>
-        
+        <h3> {{day}}</h3>
+        <p>{{name}}</p>
+       
       </li>
       <br>
     </div>
