--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -1,14 +1,13 @@
 
-<section class="">
+<section>
   <h2>Party Bus Schedule</h2>
 
-  <ul>
+  <ul class="big-div-box">
     {{#each schedule}}
     <div class="flex">
       <li>
         <h3> {{day}}</h3>
         <p>{{name}}</p>
-       
       </li>
       <br>
     </div>
