--- a/public/main.css
+++ b/public/main.css
@@ -4,11 +4,18 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   text-align: center;
+  font-size: 2vw;
 }
 
 h2 {
   text-align: center;
+  color: rgb(255, 115, 0)
 }
+
+.schedule-text {
+  color: #ffb703;
+}
+
 header {
   background-color: #023047;
   color: #ffb703;
@@ -35,7 +42,7 @@ figcaption{
   text-align: center;
   width: 100%;
   padding: 20px;
-  font-size: large;
+  font-size: 2vw;
 
  }
 
@@ -61,22 +68,35 @@ li a:vistited{
   color: white;
 }
 
-.gallery{
-  display: flex;
-  flex-direction: row;
-  border:2px solid #023047;
+.bus{
+
+  border:10px solid #023047;
   margin: 25px;
+  width: 400px;
+  border-radius: 10%;
+  padding: 10px
+  
 }
 
 .flex{
   display: flex;
   justify-content: center;
- align-content: center;
-  border:2px solid #023047;
+  align-content: center;
+  border:10px solid #023047;
   margin:25px;
   width: 350px;
 }
 
-ul {
-  display: flex;
+
+.big-div-box {
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  
+}
+
+.img{
+  object-fit: cover;
+  border-radius: 8%;
+  
 }
