--- a/views/schedule.hbs
+++ b/views/schedule.hbs
@@ -1,6 +1,6 @@
 
 <section>
-  <h2>Party Bus Schedule</h2>
+  <h2 class="schedule-text">Party Bus Schedule</h2>
 
   <ul class="big-div-box">
     {{#each schedule}}
