--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -1,27 +1,21 @@
-<form action="post">
-  <label for="name">Bus Theme</label>
-  <select name="name" id="name">
-  {{#each bus}}
-  <option value="{{id}}">{{name}}</option>
-{{/each}}
-</select>
- 
-<label for="day"> Day
-</label>
-<p>{{day}}</p>
+<div class="center">
+  <form class="form" action="post">
+    <label for="name">Bus Theme</label>
+      <select name="name" id="name">
+        {{#each bus}}
+        <option value="{{id}}">{{name}}</option>
+        {{/each}}
+      </select>
+      {{!-- <p>{{day}}</p> --}}
+      {{!-- //<label for="day"> Day</label> --}}
+    <label for="Name"> Name</label>
+    <input type="text" id="name" name="name" placeholder="enter name">
 
-<label for="Name"> Name</label>
-<input type="text" id="name" name="name" placeholder="enter name">
-
-
-<label for="Guests"> Guests</label>
-<input type="text" id="guest" name="guest" placeholder="enter num of guest">
+    <label for="Guests"> Guests</label>
+    <input type="text" id="guest" name="guest" placeholder="enter num of guest">
 
 
-<button> book now</button>
+    <button> book now</button>
 
-
-
-
-
-</form>
+  </form>
+</div>
