booking table working

--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -1,4 +1,4 @@
-<form action="post">
+<form method="post" action="/booking">
   <label for="name">Bus Theme</label>
   <select name="name" id="name">
   {{#each bus}}
