--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -1,13 +1,21 @@
 <div class="center">
   <form class="form" action="post">
+
     <label for="name">Bus Theme</label>
       <select name="name" id="name">
         {{#each bus}}
         <option value="{{id}}">{{name}}</option>
         {{/each}}
       </select>
-      {{!-- <p>{{day}}</p> --}}
-      {{!-- //<label for="day"> Day</label> --}}
+
+      <label for="day">Date</label>
+      <select name="day" id="day">
+      {{#each schedule}}
+        <option value="{{bus_id}}">{{day}}</option>
+      {{/each}}
+      </select>
+
+
     <label for="Name"> Name</label>
     <input type="text" id="name" name="name" placeholder="enter name">
 
