--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -1,32 +1,15 @@
 
 <div class="center">
-<form method="post" action="/booking" class="form">
-  <label for="name">Bus Theme</label>
-  <select name="name" id="name">
-  {{#each bus}}
-  <option value="{{id}}">{{name}}</option>
-{{/each}}
-</select>
- 
-<label for="day"> Day
-</label>
-<p>{{day}}</p>
-
-
+  <form method="post" action="/booking" class="form">
     <label for="name">Bus Theme</label>
-      <select name="name" id="name">
-        {{#each bus}}
-        <option value="{{id}}">{{name}}</option>
-        {{/each}}
-      </select>
-
-      <label for="day">Date</label>
-      <select name="day" id="day">
-      {{#each schedule}}
-        <option value="{{bus_id}}">{{day}}</option>
-      {{/each}}
-      </select>
-
+    <select name="name" id="name">
+    {{#each bus}}
+    <option value="{{id}}">{{name}}</option>
+    {{/each}}
+    </select>
+  
+    <label for="day"> Day </label>
+    <input type="text" id="name" name="name" placeholder="enter day">
 
     <label for="Name"> Name</label>
     <input type="text" id="name" name="name" placeholder="enter name">
